--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
         }
     ],
     "require": {
+        "php": "^8.1"
+    },
+    "require-dev": {
         "phpunit/phpunit": "^9.5"
     }
 }
